Final Cta Text align center fix

--- a/src/app/components/FinalCTA/FinalCTA.module.css
+++ b/src/app/components/FinalCTA/FinalCTA.module.css
@@ -43,6 +43,10 @@
   left: 0;
 }
 
+.heading {
+  text-align: center;
+}
+
 .copy {
   color: var(--cream);
   width: 80%;
